Fix: Poprawki schematów danych i ścieżek w notebookach
Zmiany:
- 01_delta_lake_operations.ipynb: Naprawa typów order_id (INT->STRING) w MERGE
- 02_medallion_architecture.ipynb: Zmiana order_amount->total_amount, order_status->payment_method
- 03_batch_streaming_load.ipynb: Naprawa schematów danych, ścieżek streaming, typów pól
- 02_lakeflow_pipelines.ipynb: Aktualizacja terminologii DLT->Lakeflow, zmiana nazw pipeline
- 05_bi_ml_integrations.ipynb: Naprawa hardcoded paths (kion_prod->zmienne z 00_setup)

Wszystkie notebooki używają teraz poprawnych typów danych zgodnych z dataset/:
- order_id: STRING (nie INT)
- total_amount: DOUBLE (nie order_amount)
- order_datetime: TIMESTAMP
- payment_method: STRING (nie order_status)
- Auto Loader: orders_stream_*.json (nie orders_batch.json)

--- a/DZIEN_2_Lakehouse_Delta_Lake/01_delta_lake_operations.ipynb
+++ b/DZIEN_2_Lakehouse_Delta_Lake/01_delta_lake_operations.ipynb
@@ -972,13 +972,13 @@
     "\n",
     "updates_data = [\n",
     "    # Istniejące zamówienie - zmiana statusu (UPDATE)\n",
-    "    (1, 101, \"2025-01-10\", 150.0, \"Shipped\"),\n",
+    "    (\"ORD00000001\", \"CUST005909\", \"2025-01-10\", 150.0, \"Shipped\"),\n",
     "    \n",
     "    # Nowe zamówienie (INSERT)\n",
-    "    (99999, 102, \"2025-01-20\", 299.99, \"Pending\"),\n",
+    "    (\"ORD99999999\", \"CUST009999\", \"2025-01-20\", 299.99, \"Pending\"),\n",
     "    \n",
     "    # Kolejne nowe zamówienie (INSERT)\n",
-    "    (99998, 103, \"2025-01-21\", 199.50, \"Pending\")\n",
+    "    (\"ORD99999998\", \"CUST009998\", \"2025-01-21\", 199.50, \"Pending\")\n",
     "]\n",
     "\n",
     "updates_df = spark.createDataFrame(\n",
@@ -1061,16 +1061,16 @@
    "source": [
     "# Weryfikacja wyników MERGE\n",
     "\n",
-    "print(\"=== Zamówienie zaktualizowane (order_id = 1) ===\")\n",
+    "print(\"=== Zamówienie zaktualizowane (order_id = ORD00000001) ===\")\n",
     "display(\n",
     "    spark.table(ORDERS_DELTA)\n",
-    "    .filter(F.col(\"order_id\") == 1)\n",
+    "    .filter(F.col(\"order_id\") == \"ORD00000001\")\n",
     ")\n",
     "\n",
-    "print(\"\\n=== Nowe zamówienia (order_id >= 99998) ===\")\n",
+    "print(\"\\n=== Nowe zamówienia (order_id LIKE 'ORD99999%') ===\")\n",
     "display(\n",
     "    spark.table(ORDERS_DELTA)\n",
-    "    .filter(F.col(\"order_id\") >= 99998)\n",
+    "    .filter(F.col(\"order_id\").like(\"ORD99999%\"))\n",
     ")"
    ]
   },
