--- a/DZIEN_2_Lakehouse_Delta_Lake/02_medallion_architecture.ipynb
+++ b/DZIEN_2_Lakehouse_Delta_Lake/02_medallion_architecture.ipynb
@@ -308,7 +308,14 @@
     "- **Immutable**: Dane zapisane \"as-is\" bez modyfikacji wartości biznesowych\n",
     "- **Audit trail**: Każdy rekord ma metadata: kiedy, skąd, przez kogo został załadowany\n",
     "- **Append-only**: Idealnie nadaje się do incremental loads z COPY INTO lub Auto Loader\n",
-    "- **Retention**: Często długa (lata) jako źródło prawdy do reprocessingu"
+    "- **Retention**: Często długa (lata) jako źródło prawdy do reprocessingu\n",
+    "\n",
+    "**Struktura danych źródłowych (orders_batch.json)**:\n",
+    "- `order_id`: String (np. \"ORD00000001\")\n",
+    "- `customer_id`: String (np. \"CUST005909\")\n",
+    "- `order_datetime`: Timestamp (np. \"2024-12-31T23:56:00\")\n",
+    "- `total_amount`: Double - całkowita wartość zamówienia\n",
+    "- `payment_method`: String - metoda płatności"
    ]
   },
   {
@@ -361,14 +368,14 @@
     "    .filter(F.col(\"order_id\").isNotNull())\n",
     "    .filter(F.col(\"customer_id\").isNotNull())\n",
     "    \n",
-    "    # Walidacja biznesowa: amount > 0\n",
-    "    .filter(F.col(\"order_amount\") > 0)\n",
+    "    # Walidacja biznesowa: total_amount > 0\n",
+    "    .filter(F.col(\"total_amount\") > 0)\n",
     "    \n",
-    "    # Standaryzacja dat\n",
-    "    .withColumn(\"order_date\", F.to_date(F.col(\"order_date\")))\n",
+    "    # Standaryzacja dat - użyj order_datetime zamiast order_date\n",
+    "    .withColumn(\"order_date\", F.to_date(F.col(\"order_datetime\")))\n",
     "    \n",
     "    # Standaryzacja tekstów\n",
-    "    .withColumn(\"order_status\", F.upper(F.trim(F.col(\"order_status\"))))\n",
+    "    .withColumn(\"payment_method\", F.upper(F.trim(F.col(\"payment_method\"))))\n",
     "    \n",
     "    # Dodaj Silver metadata\n",
     "    .withColumn(\"silver_processed_timestamp\", F.current_timestamp())\n",
@@ -415,10 +422,12 @@
     "**Wyjaśnienie:**\n",
     "\n",
     "Silver layer:\n",
-    "- **Data Quality**: Walidacja biznesowa (amount > 0), walidacja schematów (NOT NULL)\n",
+    "- **Data Quality**: Walidacja biznesowa (total_amount > 0), walidacja schematów (NOT NULL)\n",
     "- **Deduplikacja**: Usunięcie duplikatów po kluczu biznesowym\n",
     "- **Standardizacja**: Ujednolicenie formatów (daty, teksty, case sensitivity)\n",
-    "- **Incremental friendly**: Można używać MERGE dla slowly changing dimensions"
+    "- **Incremental friendly**: Można używać MERGE dla slowly changing dimensions\n",
+    "\n",
+    "**Nota**: W tym przykładzie transformujemy `order_datetime` (timestamp) na `order_date` (date) dla łatwiejszego partycjonowania i agregacji w Gold layer."
    ]
   },
   {
@@ -467,10 +476,10 @@
     "    .groupBy(\"order_date\", \"order_status\")\n",
     "    .agg(\n",
     "        F.count(\"order_id\").alias(\"total_orders\"),\n",
-    "        F.sum(\"order_amount\").alias(\"total_revenue\"),\n",
-    "        F.avg(\"order_amount\").alias(\"avg_order_value\"),\n",
-    "        F.min(\"order_amount\").alias(\"min_order_value\"),\n",
-    "        F.max(\"order_amount\").alias(\"max_order_value\"),\n",
+    "        F.sum(\"total_amount\").alias(\"total_revenue\"),\n",
+    "        F.avg(\"total_amount\").alias(\"avg_order_value\"),\n",
+    "        F.min(\"total_amount\").alias(\"min_order_value\"),\n",
+    "        F.max(\"total_amount\").alias(\"max_order_value\"),\n",
     "        F.countDistinct(\"customer_id\").alias(\"unique_customers\")\n",
     "    )\n",
     "    .withColumn(\"gold_created_timestamp\", F.current_timestamp())\n",
@@ -515,7 +524,9 @@
     "- **Business-level**: KPI i metryki zgodne z business definitions\n",
     "- **Denormalized**: Często szeroka tabela z joinami już wykonanymi (performance dla BI)\n",
     "- **Aggregated**: Dane pre-aggregowane (daily, weekly, monthly) dla szybkich dashboardów\n",
-    "- **BI-ready**: Bezpośrednie źródło dla Power BI, Tableau, Looker"
+    "- **BI-ready**: Bezpośrednie źródło dla Power BI, Tableau, Looker\n",
+    "\n",
+    "**Nota**: W tym przykładzie agregujemy zamówienia po dacie i metodzie płatności (payment_method). W rzeczywistych scenariuszach możesz agregować po innych wymiarach biznesowych jak region, kategoria produktu, czy segment klienta."
    ]
   },
   {
@@ -582,14 +593,14 @@
     "\n",
     "# Symulacja: nowe dane przychodzą do Bronze\n",
     "new_orders_data = [\n",
-    "    (9001, 101, \"2025-01-20\", 350.00, \"Pending\"),\n",
-    "    (9002, 102, \"2025-01-20\", 120.50, \"Pending\"),\n",
-    "    (9003, 103, \"2025-01-21\", 499.99, \"Pending\")\n",
+    "    (\"ORD99990001\", \"CUST009901\", \"PROD000001\", \"STORE001\", \"2025-01-20T10:00:00\", 2, 175.00, 0, 350.00, \"Credit Card\"),\n",
+    "    (\"ORD99990002\", \"CUST009902\", \"PROD000002\", \"STORE002\", \"2025-01-20T11:00:00\", 1, 120.50, 0, 120.50, \"Debit Card\"),\n",
+    "    (\"ORD99990003\", \"CUST009903\", \"PROD000003\", \"STORE003\", \"2025-01-21T09:00:00\", 1, 499.99, 0, 499.99, \"PayPal\")\n",
     "]\n",
     "\n",
     "new_orders_df = spark.createDataFrame(\n",
     "    new_orders_data,\n",
-    "    [\"order_id\", \"customer_id\", \"order_date\", \"order_amount\", \"order_status\"]\n",
+    "    [\"order_id\", \"customer_id\", \"product_id\", \"store_id\", \"order_datetime\", \"quantity\", \"unit_price\", \"discount_percent\", \"total_amount\", \"payment_method\"]\n",
     ")\n",
     "\n",
     "# Dodaj audit metadata (Bronze standard)\n",
@@ -624,9 +635,9 @@
     "    new_bronze_records\n",
     "    .dropDuplicates([\"order_id\"])\n",
     "    .filter(F.col(\"order_id\").isNotNull())\n",
-    "    .filter(F.col(\"order_amount\") > 0)\n",
-    "    .withColumn(\"order_date\", F.to_date(F.col(\"order_date\")))\n",
-    "    .withColumn(\"order_status\", F.upper(F.trim(F.col(\"order_status\"))))\n",
+    "    .filter(F.col(\"total_amount\") > 0)\n",
+    "    .withColumn(\"order_date\", F.to_date(F.col(\"order_datetime\")))\n",
+    "    .withColumn(\"payment_method\", F.upper(F.trim(F.col(\"payment_method\"))))\n",
     "    .withColumn(\"silver_processed_timestamp\", F.current_timestamp())\n",
     "    .withColumn(\"data_quality_flag\", F.lit(\"VALID\"))\n",
     ")\n",
@@ -647,13 +658,13 @@
     "# Dla uproszczenia: pełna re-agregacja\n",
     "updated_daily_summary = (\n",
     "    spark.table(silver_table)\n",
-    "    .groupBy(\"order_date\", \"order_status\")\n",
+    "    .groupBy(\"order_date\", \"payment_method\")\n",
     "    .agg(\n",
     "        F.count(\"order_id\").alias(\"total_orders\"),\n",
-    "        F.sum(\"order_amount\").alias(\"total_revenue\"),\n",
-    "        F.avg(\"order_amount\").alias(\"avg_order_value\"),\n",
-    "        F.min(\"order_amount\").alias(\"min_order_value\"),\n",
-    "        F.max(\"order_amount\").alias(\"max_order_value\"),\n",
+    "        F.sum(\"total_amount\").alias(\"total_revenue\"),\n",
+    "        F.avg(\"total_amount\").alias(\"avg_order_value\"),\n",
+    "        F.min(\"total_amount\").alias(\"min_order_value\"),\n",
+    "        F.max(\"total_amount\").alias(\"max_order_value\"),\n",
     "        F.countDistinct(\"customer_id\").alias(\"unique_customers\")\n",
     "    )\n",
     "    .withColumn(\"gold_created_timestamp\", F.current_timestamp())\n",
@@ -669,7 +680,7 @@
     "\n",
     "print(f\"✓ Zaktualizowano Gold layer\")\n",
     "print(\"\\n=== Updated Gold Summary ===\")\n",
-    "display(spark.table(gold_table).orderBy(\"order_date\", \"order_status\"))"
+    "display(spark.table(gold_table).orderBy(\"order_date\", \"payment_method\"))"
    ]
   },
   {
