--- a/DZIEN_2_Lakehouse_Delta_Lake/03_batch_streaming_load.ipynb
+++ b/DZIEN_2_Lakehouse_Delta_Lake/03_batch_streaming_load.ipynb
@@ -108,11 +108,13 @@
     "spark.sql(f\"USE SCHEMA {BRONZE_SCHEMA}\")\n",
     "\n",
     "# Ścieżki do danych i checkpointów\n",
-    "ORDERS_JSON = f\"{DATASET_BASE_PATH}/orders/orders_batch.json\"\n",
+    "ORDERS_BATCH_JSON = f\"{DATASET_BASE_PATH}/orders/orders_batch.json\"\n",
+    "ORDERS_STREAMING_JSON = f\"{DATASET_BASE_PATH}/orders/orders_stream_*.json\"  # Wildcard dla plików streaming\n",
     "CHECKPOINT_PATH = f\"/tmp/{raw_user}/checkpoints\"\n",
     "\n",
     "print(f\"\\n=== Konfiguracja ===\")\n",
-    "print(f\"Orders JSON: {ORDERS_JSON}\")\n",
+    "print(f\"Orders Batch JSON: {ORDERS_BATCH_JSON}\")\n",
+    "print(f\"Orders Streaming JSON: {ORDERS_STREAMING_JSON}\")\n",
     "print(f\"Checkpoint path: {CHECKPOINT_PATH}\")"
    ]
   },
@@ -160,16 +162,21 @@
    "source": [
     "# Przykład 1.1 - COPY INTO basic\n",
     "\n",
-    "# Utwórz target table\n",
+    "# Utwórz target table z poprawnymi typami danych\n",
     "copy_into_table = f\"{BRONZE_SCHEMA}.orders_copy_into\"\n",
     "\n",
     "spark.sql(f\"\"\"\n",
     "    CREATE TABLE IF NOT EXISTS {copy_into_table} (\n",
-    "        order_id INT,\n",
-    "        customer_id INT,\n",
-    "        order_date STRING,\n",
-    "        order_amount DOUBLE,\n",
-    "        order_status STRING,\n",
+    "        order_id STRING,\n",
+    "        customer_id STRING,\n",
+    "        product_id STRING,\n",
+    "        store_id STRING,\n",
+    "        order_datetime TIMESTAMP,\n",
+    "        quantity INT,\n",
+    "        unit_price DOUBLE,\n",
+    "        discount_percent INT,\n",
+    "        total_amount DOUBLE,\n",
+    "        payment_method STRING,\n",
     "        _metadata STRUCT<file_path: STRING, file_name: STRING, file_modification_time: TIMESTAMP>\n",
     "    )\n",
     "    USING DELTA\n",
@@ -180,7 +187,7 @@
     "# Wykonaj COPY INTO\n",
     "copy_result = spark.sql(f\"\"\"\n",
     "    COPY INTO {copy_into_table}\n",
-    "    FROM (SELECT *, _metadata FROM '{ORDERS_JSON}')\n",
+    "    FROM (SELECT *, _metadata FROM '{ORDERS_BATCH_JSON}')\n",
     "    FILEFORMAT = JSON\n",
     "    FORMAT_OPTIONS ('multiLine' = 'true')\n",
     "    COPY_OPTIONS ('mergeSchema' = 'true')\n",
@@ -197,7 +204,7 @@
     "print(\"\\n=== Dane z metadata ===\")\n",
     "display(\n",
     "    spark.table(copy_into_table)\n",
-    "    .select(\"order_id\", \"order_amount\", \"_metadata.file_name\")\n",
+    "    .select(\"order_id\", \"customer_id\", \"total_amount\", \"payment_method\", \"_metadata.file_name\")\n",
     "    .limit(5)\n",
     ")"
    ]
@@ -239,7 +246,7 @@
     "print(\"=== Ponowne wykonanie COPY INTO (idempotency test) ===\")\n",
     "copy_result_2 = spark.sql(f\"\"\"\n",
     "    COPY INTO {copy_into_table}\n",
-    "    FROM (SELECT *, _metadata FROM '{ORDERS_JSON}')\n",
+    "    FROM (SELECT *, _metadata FROM '{ORDERS_BATCH_JSON}')\n",
     "    FILEFORMAT = JSON\n",
     "    FORMAT_OPTIONS ('multiLine' = 'true')\n",
     "\"\"\")\n",
@@ -308,7 +315,7 @@
     "autoloader_table = f\"{BRONZE_SCHEMA}.orders_autoloader\"\n",
     "autoloader_checkpoint = f\"{CHECKPOINT_PATH}/autoloader_orders\"\n",
     "\n",
-    "# Auto Loader z readStream\n",
+    "# Auto Loader z readStream - używa wildcard dla plików streaming\n",
     "orders_stream = (\n",
     "    spark.readStream\n",
     "    .format(\"cloudFiles\")  # Auto Loader format\n",
@@ -316,7 +323,7 @@
     "    .option(\"cloudFiles.schemaLocation\", f\"{autoloader_checkpoint}/schema\")  # Schema tracking\n",
     "    .option(\"cloudFiles.inferColumnTypes\", \"true\")  # Infer types (not just strings)\n",
     "    .option(\"multiLine\", \"true\")\n",
-    "    .load(ORDERS_JSON)\n",
+    "    .load(ORDERS_STREAMING_JSON)  # Wildcard dla orders_stream_*.json\n",
     ")\n",
     "\n",
     "print(\"=== Auto Loader Stream Schema ===\")\n",
@@ -447,23 +454,24 @@
     "streaming_table = f\"{BRONZE_SCHEMA}.orders_streaming\"\n",
     "streaming_checkpoint = f\"{CHECKPOINT_PATH}/streaming_orders\"\n",
     "\n",
-    "# ReadStream z transformacjami\n",
+    "# ReadStream z transformacjami - używa wildcard dla plików streaming\n",
     "orders_stream = (\n",
     "    spark.readStream\n",
     "    .format(\"cloudFiles\")\n",
     "    .option(\"cloudFiles.format\", \"json\")\n",
     "    .option(\"cloudFiles.schemaLocation\", f\"{streaming_checkpoint}/schema\")\n",
+    "    .option(\"cloudFiles.inferColumnTypes\", \"true\")\n",
     "    .option(\"multiLine\", \"true\")\n",
-    "    .load(ORDERS_JSON)\n",
+    "    .load(ORDERS_STREAMING_JSON)  # Wildcard dla orders_stream_*.json\n",
     ")\n",
     "\n",
     "# Transformacje na streamie (jak na batch DataFrame)\n",
     "orders_transformed = (\n",
     "    orders_stream\n",
-    "    .withColumn(\"order_date\", F.to_date(F.col(\"order_date\")))\n",
-    "    .withColumn(\"order_status\", F.upper(F.col(\"order_status\")))\n",
+    "    .withColumn(\"order_date\", F.to_date(F.col(\"order_datetime\")))  # Ekstrakcja daty z timestamp\n",
+    "    .withColumn(\"payment_method_upper\", F.upper(F.col(\"payment_method\")))  # Normalizacja payment_method\n",
     "    .withColumn(\"stream_processed_ts\", F.current_timestamp())\n",
-    "    .filter(F.col(\"order_amount\") > 0)  # Quality check\n",
+    "    .filter(F.col(\"total_amount\") > 0)  # Quality check - pozytywna kwota\n",
     ")\n",
     "\n",
     "print(\"=== Transformed Stream Schema ===\")\n",
@@ -490,7 +498,7 @@
     "print(\"\\n=== Przetworzone dane ===\")\n",
     "display(\n",
     "    spark.table(streaming_table)\n",
-    "    .select(\"order_id\", \"order_date\", \"order_status\", \"stream_processed_ts\")\n",
+    "    .select(\"order_id\", \"order_date\", \"payment_method\", \"payment_method_upper\", \"total_amount\", \"stream_processed_ts\")\n",
     "    .limit(5)\n",
     ")"
    ]
@@ -506,7 +514,8 @@
     "- **Transformacje**: Możemy używać standardowych DataFrame API (withColumn, filter, join)\n",
     "- **trigger(once=True)**: Batch mode - użyteczne dla testing i backfill\n",
     "- **outputMode=\"append\"**: Tylko nowe rekordy zapisywane (domyślne dla streaming)\n",
-    "- **checkpointLocation**: Fault tolerance - możliwość recovery po failure"
+    "- **checkpointLocation**: Fault tolerance - możliwość recovery po failure\n",
+    "- **Przykładowe transformacje**: ekstrakcja daty z timestamp, normalizacja payment_method, quality checks"
    ]
   },
   {
@@ -531,25 +540,26 @@
     "streaming_agg_table = f\"{BRONZE_SCHEMA}.orders_streaming_agg\"\n",
     "agg_checkpoint = f\"{CHECKPOINT_PATH}/streaming_agg\"\n",
     "\n",
-    "# ReadStream\n",
+    "# ReadStream - używa wildcard dla plików streaming\n",
     "orders_stream = (\n",
     "    spark.readStream\n",
     "    .format(\"cloudFiles\")\n",
     "    .option(\"cloudFiles.format\", \"json\")\n",
     "    .option(\"cloudFiles.schemaLocation\", f\"{agg_checkpoint}/schema\")\n",
+    "    .option(\"cloudFiles.inferColumnTypes\", \"true\")\n",
     "    .option(\"multiLine\", \"true\")\n",
-    "    .load(ORDERS_JSON)\n",
+    "    .load(ORDERS_STREAMING_JSON)  # Wildcard dla orders_stream_*.json\n",
     ")\n",
     "\n",
-    "# Agregacje: count i sum per status\n",
+    "# Agregacje: count i sum per payment_method\n",
     "orders_agg = (\n",
     "    orders_stream\n",
-    "    .withColumn(\"order_status\", F.upper(F.col(\"order_status\")))\n",
-    "    .groupBy(\"order_status\")\n",
+    "    .withColumn(\"payment_method_upper\", F.upper(F.col(\"payment_method\")))\n",
+    "    .groupBy(\"payment_method_upper\")\n",
     "    .agg(\n",
     "        F.count(\"order_id\").alias(\"total_orders\"),\n",
-    "        F.sum(\"order_amount\").alias(\"total_revenue\"),\n",
-    "        F.avg(\"order_amount\").alias(\"avg_order_value\")\n",
+    "        F.sum(\"total_amount\").alias(\"total_revenue\"),\n",
+    "        F.avg(\"total_amount\").alias(\"avg_order_value\")\n",
     "    )\n",
     ")\n",
     "\n",
@@ -567,8 +577,8 @@
     "query.awaitTermination()\n",
     "\n",
     "print(f\"\\n✓ Streaming aggregation completed\")\n",
-    "print(\"\\n=== Wyniki agregacji ===\")\n",
-    "display(spark.table(streaming_agg_table))"
+    "print(\"\\n=== Wyniki agregacji per payment method ===\")\n",
+    "display(spark.table(streaming_agg_table).orderBy(\"payment_method_upper\"))"
    ]
   },
   {
@@ -582,6 +592,7 @@
     "- **outputMode=\"complete\"**: Cała tabela wynikowa zapisywana przy każdym micro-batch (wymagane dla groupBy bez watermark)\n",
     "- **outputMode=\"update\"**: Tylko zaktualizowane wiersze (użyteczne z watermark)\n",
     "- **Stateful operations**: GroupBy/Aggregations wymagają state management (przechowywany w checkpoint)\n",
+    "- **Use case**: Agregacje per payment method (Cash, Credit Card, Debit Card, PayPal) w czasie rzeczywistym\n",
     "\n",
     "W produkcji: używamy watermark dla windowed aggregations i outputMode=\"update\"."
    ]
@@ -630,14 +641,19 @@
     "upsert_table = f\"{BRONZE_SCHEMA}.orders_upsert\"\n",
     "upsert_checkpoint = f\"{CHECKPOINT_PATH}/streaming_upsert\"\n",
     "\n",
-    "# Utwórz target table jeśli nie istnieje\n",
+    "# Utwórz target table jeśli nie istnieje - poprawne typy danych\n",
     "spark.sql(f\"\"\"\n",
     "    CREATE TABLE IF NOT EXISTS {upsert_table} (\n",
-    "        order_id INT,\n",
-    "        customer_id INT,\n",
-    "        order_date STRING,\n",
-    "        order_amount DOUBLE,\n",
-    "        order_status STRING,\n",
+    "        order_id STRING,\n",
+    "        customer_id STRING,\n",
+    "        product_id STRING,\n",
+    "        store_id STRING,\n",
+    "        order_datetime TIMESTAMP,\n",
+    "        quantity INT,\n",
+    "        unit_price DOUBLE,\n",
+    "        discount_percent INT,\n",
+    "        total_amount DOUBLE,\n",
+    "        payment_method STRING,\n",
     "        last_updated TIMESTAMP\n",
     "    )\n",
     "    USING DELTA\n",
@@ -659,16 +675,23 @@
     "            \"target.order_id = source.order_id\"\n",
     "        )\n",
     "        .whenMatchedUpdate(set = {\n",
-    "            \"order_status\": \"source.order_status\",\n",
-    "            \"order_amount\": \"source.order_amount\",\n",
+    "            \"payment_method\": \"source.payment_method\",\n",
+    "            \"total_amount\": \"source.total_amount\",\n",
+    "            \"order_datetime\": \"source.order_datetime\",\n",
+    "            \"quantity\": \"source.quantity\",\n",
     "            \"last_updated\": \"source.last_updated\"\n",
     "        })\n",
     "        .whenNotMatchedInsert(values = {\n",
     "            \"order_id\": \"source.order_id\",\n",
     "            \"customer_id\": \"source.customer_id\",\n",
-    "            \"order_date\": \"source.order_date\",\n",
-    "            \"order_amount\": \"source.order_amount\",\n",
-    "            \"order_status\": \"source.order_status\",\n",
+    "            \"product_id\": \"source.product_id\",\n",
+    "            \"store_id\": \"source.store_id\",\n",
+    "            \"order_datetime\": \"source.order_datetime\",\n",
+    "            \"quantity\": \"source.quantity\",\n",
+    "            \"unit_price\": \"source.unit_price\",\n",
+    "            \"discount_percent\": \"source.discount_percent\",\n",
+    "            \"total_amount\": \"source.total_amount\",\n",
+    "            \"payment_method\": \"source.payment_method\",\n",
     "            \"last_updated\": \"source.last_updated\"\n",
     "        })\n",
     "        .execute()\n",
@@ -676,14 +699,15 @@
     "    \n",
     "    print(f\"Batch {batchId}: Merged {microBatchDF.count()} records\")\n",
     "\n",
-    "# ReadStream\n",
+    "# ReadStream - używa wildcard dla plików streaming\n",
     "orders_stream = (\n",
     "    spark.readStream\n",
     "    .format(\"cloudFiles\")\n",
     "    .option(\"cloudFiles.format\", \"json\")\n",
     "    .option(\"cloudFiles.schemaLocation\", f\"{upsert_checkpoint}/schema\")\n",
+    "    .option(\"cloudFiles.inferColumnTypes\", \"true\")\n",
     "    .option(\"multiLine\", \"true\")\n",
-    "    .load(ORDERS_JSON)\n",
+    "    .load(ORDERS_STREAMING_JSON)  # Wildcard dla orders_stream_*.json\n",
     ")\n",
     "\n",
     "# WriteStream z foreachBatch\n",
