--- a/DZIEN_3_Transformation_Governance_Integrations/02_lakeflow_pipelines.ipynb
+++ b/DZIEN_3_Transformation_Governance_Integrations/02_lakeflow_pipelines.ipynb
@@ -5,7 +5,7 @@
    "id": "78971093",
    "metadata": {},
    "source": [
-    "# Delta Live Tables (Lakeflow) Pipelines\n",
+    "# Lakeflow Pipelines (Delta Live Tables)\n",
     "\n",
     "**KION Training - Dzień 3**\n",
     "\n",
@@ -13,7 +13,7 @@
     "\n",
     "## 📚 Agenda\n",
     "\n",
-    "1. Wprowadzenie do Delta Live Tables (DLT)\n",
+    "1. Wprowadzenie do Lakeflow (Delta Live Tables)\n",
     "2. Deklaratywne definicje pipeline'ów\n",
     "3. Materialized Views vs Streaming Tables\n",
     "4. Data Quality Expectations\n",
@@ -25,7 +25,7 @@
     "## 🎯 Cele szkolenia\n",
     "\n",
     "Po tym module będziesz potrafić:\n",
-    "- Definiować deklaratywne pipeline'y w DLT\n",
+    "- Definiować deklaratywne pipeline'y w Lakeflow\n",
     "- Różnicować Materialized Views i Streaming Tables\n",
     "- Implementować Data Quality Expectations\n",
     "- Monitorować pipeline'y przez Event Log\n",
@@ -39,20 +39,26 @@
    "id": "750fe993",
    "metadata": {},
    "source": [
-    "## 1️⃣ Wprowadzenie do Delta Live Tables (DLT)\n",
+    "## 1️⃣ Wprowadzenie do Lakeflow\n",
     "\n",
-    "**Delta Live Tables (DLT)** to framework do deklaratywnego budowania ETL/ELT pipeline'ów w Databricks.\n",
+    "**Lakeflow** to framework do deklaratywnego budowania ETL/ELT pipeline'ów w Databricks.\n",
+    "\n",
+    "### 📌 Nota: Lakeflow = Delta Live Tables\n",
+    "**Lakeflow** to nowa nazwa dla **Delta Live Tables (DLT)**. \n",
+    "- API i składnia pozostają te same (`@dlt.table()`)\n",
+    "- Dokumentacja może używać obu nazw\n",
+    "- W kodzie używamy modułu `dlt`\n",
     "\n",
     "### Kluczowe cechy:\n",
     "- **Deklaratywny**: definiujesz \"co\", nie \"jak\"\n",
-    "- **Automatyczna orkiestracja**: DLT zarządza zależnościami\n",
+    "- **Automatyczna orkiestracja**: Lakeflow zarządza zależnościami\n",
     "- **Data Quality**: wbudowane expectations\n",
     "- **Monitoring**: event log, lineage, metrics\n",
     "- **SQL i Python API**: elastyczność języka\n",
     "\n",
-    "### Różnica DLT vs tradycyjne Notebooks:\n",
+    "### Różnica Lakeflow vs tradycyjne Notebooks:\n",
     "\n",
-    "| Aspekt | Tradycyjne Notebooks | Delta Live Tables |\n",
+    "| Aspekt | Tradycyjne Notebooks | Lakeflow |\n",
     "|--------|---------------------|------------------|\n",
     "| Definicja | Imperatywna (kroki) | Deklaratywna (rezultat) |\n",
     "| Zależności | Ręczne | Automatyczne |\n",
@@ -72,7 +78,9 @@
     "\n",
     "### Python API - podstawowa składnia:\n",
     "\n",
-    "W DLT definiujemy tabele za pomocą dekoratorów `@dlt.table()` lub `@dlt.view()`."
+    "W Lakeflow definiujemy tabele za pomocą dekoratorów `@dlt.table()` lub `@dlt.view()`.\n",
+    "\n",
+    "**Nota**: Mimo nazwy \"Lakeflow\", w kodzie używamy modułu `dlt` (Delta Live Tables)."
    ]
   },
   {
@@ -82,10 +90,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import dlt\n",
+    "import dlt  # Lakeflow używa modułu 'dlt' (Delta Live Tables)\n",
     "from pyspark.sql.functions import *\n",
     "\n",
-    "# Przykład 1: Prosta tabela DLT\n",
+    "# Przykład 1: Prosta tabela Lakeflow\n",
     "@dlt.table(\n",
     "    name=\"raw_orders\",\n",
     "    comment=\"Raw orders data from CSV source\"\n",
@@ -128,7 +136,7 @@
    "source": [
     "### SQL API - alternatywna składnia:\n",
     "\n",
-    "DLT wspiera również czysty SQL - idealne dla zespołów analitycznych."
+    "Lakeflow wspiera również czysty SQL - idealne dla zespołów analitycznych."
    ]
   },
   {
@@ -138,7 +146,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# SQL w DLT (w osobnym notebooku SQL):\n",
+    "# SQL w Lakeflow (w osobnym notebooku SQL):\n",
     "\n",
     "# CREATE OR REFRESH LIVE TABLE raw_orders\n",
     "# COMMENT \"Raw orders data from CSV source\"\n",
@@ -165,7 +173,7 @@
     "\n",
     "## 3️⃣ Materialized Views vs Streaming Tables\n",
     "\n",
-    "DLT oferuje dwa główne typy tabel:\n",
+    "Lakeflow oferuje dwa główne typy tabel:\n",
     "\n",
     "### Materialized Views\n",
     "- **Batch processing**: przetwarzanie wsadowe\n",
@@ -275,7 +283,7 @@
    "source": [
     "## 4️⃣ Data Quality Expectations\n",
     "\n",
-    "**Expectations** to deklaratywny sposób definiowania reguł jakości danych w DLT.\n",
+    "**Expectations** to deklaratywny sposób definiowania reguł jakości danych w Lakeflow.\n",
     "\n",
     "### Trzy typy expectations:\n",
     "\n",
@@ -393,7 +401,7 @@
     "\n",
     "### Event Log\n",
     "\n",
-    "Każdy DLT pipeline generuje **Event Log** - szczegółowy dziennik wszystkich operacji:\n",
+    "Każdy Lakeflow pipeline generuje **Event Log** - szczegółowy dziennik wszystkich operacji:\n",
     "- Czas wykonania każdej tabeli\n",
     "- Liczba przetworzonych wierszy\n",
     "- Naruszenia expectations\n",
@@ -401,7 +409,7 @@
     "- Resource usage (CPU, memory)\n",
     "\n",
     "Event Log jest dostępny przez:\n",
-    "1. **DLT Pipeline UI**: graficzny interfejs\n",
+    "1. **Lakeflow Pipeline UI**: graficzny interfejs\n",
     "2. **Event Log Table**: delta table z metadanymi\n",
     "\n",
     "### Zapytanie Event Log:"
@@ -418,7 +426,7 @@
     "# Lokalizacja: system.event_log.<pipeline_id>\n",
     "\n",
     "# Przykładowe zapytanie:\n",
-    "event_log_df = spark.read.table(\"system.event_log.kion_dlt_pipeline\")\n",
+    "event_log_df = spark.read.table(\"system.event_log.kion_lakeflow_pipeline\")\n",
     "\n",
     "# Filtrowanie po typie eventu\n",
     "quality_events = event_log_df.filter(col(\"event_type\") == \"data_quality\")\n",
@@ -465,13 +473,13 @@
    "source": [
     "### Data Lineage\n",
     "\n",
-    "DLT automatycznie śledzi **lineage** - relacje między tabelami:\n",
+    "Lakeflow automatycznie śledzi **lineage** - relacje między tabelami:\n",
     "- Które tabele są źródłami (upstream)\n",
     "- Które tabele są celami (downstream)\n",
     "- Jak dane przepływają przez pipeline\n",
     "\n",
     "**Lineage jest widoczny w**:\n",
-    "1. **DLT Pipeline Graph**: wizualizacja zależności\n",
+    "1. **Lakeflow Pipeline Graph**: wizualizacja zależności\n",
     "2. **Unity Catalog**: end-to-end lineage\n",
     "3. **System tables**: metadata queries\n",
     "\n",
@@ -493,7 +501,7 @@
     "        source_type,\n",
     "        created_at\n",
     "    FROM system.access.table_lineage\n",
-    "    WHERE target_table_full_name LIKE '%kion_dlt%'\n",
+    "    WHERE target_table_full_name LIKE '%kion_lakeflow%'\n",
     "    ORDER BY created_at DESC\n",
     "\"\"\")\n",
     "lineage_df.display()"
@@ -508,7 +516,7 @@
     "\n",
     "## 6️⃣ Automatic Orchestration\n",
     "\n",
-    "DLT automatycznie zarządza:\n",
+    "Lakeflow automatycznie zarządza:\n",
     "1. **Dependency resolution**: wykrywa kolejność wykonania\n",
     "2. **Parallelization**: wykonuje niezależne tabele równolegle\n",
     "3. **Retry logic**: automatyczne retry przy błędach\n",
@@ -524,20 +532,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Konfiguracja DLT Pipeline (JSON configuration)\n",
+    "# Konfiguracja Lakeflow Pipeline (JSON configuration)\n",
     "pipeline_config = {\n",
-    "    \"name\": \"KION_Orders_DLT_Pipeline\",\n",
-    "    \"storage\": \"/mnt/dlt/kion_orders\",\n",
-    "    \"target\": \"kion_dlt_db\",\n",
+    "    \"name\": \"KION_Orders_Lakeflow_Pipeline\",\n",
+    "    \"storage\": \"/mnt/lakeflow/kion_orders\",\n",
+    "    \"target\": \"kion_lakeflow_db\",\n",
     "    \"notebooks\": [\n",
     "        {\n",
-    "            \"path\": \"/Workspace/KION/dlt_orders_bronze\"\n",
+    "            \"path\": \"/Workspace/KION/lakeflow_orders_bronze\"\n",
     "        },\n",
     "        {\n",
-    "            \"path\": \"/Workspace/KION/dlt_orders_silver\"\n",
+    "            \"path\": \"/Workspace/KION/lakeflow_orders_silver\"\n",
     "        },\n",
     "        {\n",
-    "            \"path\": \"/Workspace/KION/dlt_orders_gold\"\n",
+    "            \"path\": \"/Workspace/KION/lakeflow_orders_gold\"\n",
     "        }\n",
     "    ],\n",
     "    \"configuration\": {\n",
@@ -555,7 +563,7 @@
     "    \"development\": True   # True = development mode (full refresh każde uruchomienie)\n",
     "}\n",
     "\n",
-    "print(\"DLT Pipeline configuration ready!\")"
+    "print(\"Lakeflow Pipeline configuration ready!\")"
    ]
   },
   {
@@ -589,7 +597,7 @@
    "id": "d2adc13f",
    "metadata": {},
    "source": [
-    "## 🔨 Kompletny przykład: Bronze → Silver → Gold DLT Pipeline\n",
+    "## 🔨 Kompletny przykład: Bronze → Silver → Gold Lakeflow Pipeline\n",
     "\n",
     "### Pipeline Architecture:\n",
     "```\n",
@@ -763,7 +771,7 @@
     "        level,\n",
     "        dataset,\n",
     "        message\n",
-    "    FROM event_log(system.event_log.kion_dlt_pipeline)\n",
+    "    FROM event_log(system.event_log.kion_lakeflow_pipeline)\n",
     "    WHERE level = 'ERROR'\n",
     "    ORDER BY timestamp DESC\n",
     "    LIMIT 20\n",
@@ -786,7 +794,7 @@
     "        SUM(failed_records) as total_failures,\n",
     "        SUM(passed_records) as total_passed,\n",
     "        ROUND(SUM(failed_records) * 100.0 / (SUM(failed_records) + SUM(passed_records)), 2) as failure_rate_pct\n",
-    "    FROM event_log(system.event_log.kion_dlt_pipeline)\n",
+    "    FROM event_log(system.event_log.kion_lakeflow_pipeline)\n",
     "    WHERE event_type = 'data_quality'\n",
     "    GROUP BY dataset, expectation\n",
     "    HAVING SUM(failed_records) > 0\n",
@@ -809,7 +817,7 @@
     "        dataset,\n",
     "        AVG(execution_duration / 1000) as avg_execution_seconds,\n",
     "        SUM(num_output_rows) as total_rows_processed\n",
-    "    FROM event_log(system.event_log.kion_dlt_pipeline)\n",
+    "    FROM event_log(system.event_log.kion_lakeflow_pipeline)\n",
     "    WHERE event_type = 'flow_progress'\n",
     "    GROUP BY execution_hour, dataset\n",
     "    ORDER BY execution_hour DESC, dataset\n",
@@ -837,7 +845,7 @@
     "\n",
     "### Key Takeaways:\n",
     "\n",
-    "1. **DLT upraszcza ETL**: deklaratywna składnia, automatyczna orkiestracja\n",
+    "1. **Lakeflow upraszcza ETL**: deklaratywna składnia, automatyczna orkiestracja\n",
     "2. **Quality first**: wbudowane expectations zapewniają jakość danych\n",
     "3. **Observability**: Event Log + Lineage = pełna widoczność\n",
     "4. **Streaming i Batch**: jeden framework dla obu paradygmatów\n",
@@ -845,14 +853,14 @@
     "\n",
     "### Następne kroki:\n",
     "- **Notebook 03**: Databricks Jobs Orchestration\n",
-    "- **Workshop 02**: Hands-on DLT + Orchestration\n",
+    "- **Workshop 02**: Hands-on Lakeflow + Orchestration\n",
     "\n",
     "---\n",
     "\n",
     "## 📚 Dodatkowe zasoby\n",
     "\n",
-    "- [Delta Live Tables Documentation](https://docs.databricks.com/delta-live-tables/index.html)\n",
-    "- [DLT Best Practices](https://docs.databricks.com/delta-live-tables/best-practices.html)\n",
+    "- [Lakeflow Documentation](https://docs.databricks.com/delta-live-tables/index.html)\n",
+    "- [Lakeflow Best Practices](https://docs.databricks.com/delta-live-tables/best-practices.html)\n",
     "- [Event Log Reference](https://docs.databricks.com/delta-live-tables/observability.html)\n",
     "\n",
     "---"
